[metadata]
name = rbnbr_pyutility
version = 0.0.12
author = Ruben Bauer
author_email = ruben.bauer98@googlemail.com
description = Some utility stuff I use from time to time that are project independent.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rbnbr/PythonUtility
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy

[options.packages.find]
where = src